# HRPC

./: .gitignore  CMakeLists.txt  Chinese.md  README.md
.cache/clangd/index/: main.cpp.2BF740C6AFE78479.idx
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  userService.cc
example/caller/: CMakeLists.txt  callUserService.cc
lib/include/: rpcConfig.h  rpcController.h
log/: rpc server.ERROR  rpc server.FATAL  rpc server.INFO  rpc server.WARNING  rpc server.laptop.hyn.log.ERROR.20230727-005600.29316  rpc server.laptop.hyn.log.ERROR.20230728-201416.32094  rpc server.laptop.hyn.log.FATAL.20230727-005600.29316  rpc server.laptop.hyn.log.INFO.20230727-005600.29316  rpc server.laptop.hyn.log.INFO.20230728-201323.31891  rpc server.laptop.hyn.log.INFO.20230728-201853.33182  rpc server.laptop.hyn.log.INFO.20230728-201902.33184  rpc server.laptop.hyn.log.WARNING.20230727-005600.29316  rpc server.laptop.hyn.log.WARNING.20230728-201251.31653  rpc server.laptop.hyn.log.WARNING.20230728-201642.32414
src/: CMakeLists.txt  logger.cc  logger.h  rpcApplication.cc  rpcChannel.cc  rpcConfig.cc  rpcHead.pb.cc  rpcHead.proto  rpcProvider.cc  zookeeperUtil.cc
src/include/: hrpc.h  rpcApplication.h  rpcChannel.h  rpcConfig.h  rpcController.h  rpcHead.pb.h  rpcProvider.h  zookeeperUtil.h
test/protobuf/: a.out  main.cc  main.cpp  test.pb.cc  test.pb.h  test.proto
